--- a/src/sass/utils/_body.scss
+++ b/src/sass/utils/_body.scss
@@ -4,7 +4,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     line-height: 1.5;
-    background-image: url(../images/Nature.jpg);
+    background-image: url(../images/nature.jpg);
 
     background-size: cover;
     background-attachment: fixed;
