--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,5 @@
-@import './common';
-@import './example';
+@import './utils/common';
+@import './utils/body';
+@import './utils/form';
+@import './utils/search-button';
+@import './utils/gallery';
