--- a/src/sass/utils/_body.scss
+++ b/src/sass/utils/_body.scss
@@ -4,14 +4,14 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     line-height: 1.5;
-    // background-image: url(../images/nature.jpg);
+    background-image: url(../images/nature.jpg);
 
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
 
-    padding-top: 114px;
+    padding-top: 114px;  
 }
 
 img {
